add swagger definitions
